--- a/add.css
+++ b/add.css
@@ -45,6 +45,9 @@ body {
   opacity: 0;
 }
 
+.frontCard{
+  transform:rotateY(180deg);
+}
 
 @media screen and (min-width: 480px) and (max-width: 650px) {
  .memory-game {
